--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
-    <link href="styles/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link
     href="https://fonts.google.com/?stroke=Sans+Serif"
     rel="stylesheet" />
@@ -46,7 +46,7 @@
 </a>
 <button>Change user</button>
 
-<script src="scripts/main.js"></script>
+<script src="main.js"></script>
 
   </body>
 </html>
