--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
   <body>
     
-    <h1>Nikita Seth's Webpage for DS4200</h1>
+    <h1>Nikita Seth's Webpage for DS4200 Homework 1 </h1>
     <img src="seth_nikita.jpg" alt="Picture of Nikita Seth" />
     <p> Click anywhere to see a special message!</p>
     <p>Hello! My name is Nikita Seth, and I am a Fourth year psychology major with a data science minor. I am from Lexington, Massachusetts. I am graduating this spring, and am excited to start a full time job!</p>
@@ -39,7 +39,7 @@
 </ul>
 <p>Here is a picture of my dog Lucy, I love her very much</p>
 
-<img src="dog.png" alt="Picture of a poodle" />
+<img src="lucy.png" alt="Picture of a poodle" />
 <p>Here is the link to one of my favorite cooking websites</p>
 <a href="https://sallysbakingaddiction.com/">
   Sally's Baking Addiction
