--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet" />
     <link
     href="https://fonts.google.com/?stroke=Sans+Serif"
     rel="stylesheet" />
@@ -15,7 +15,7 @@
   <body>
     
     <h1>Nikita Seth's Webpage for DS4200 Homework 1 </h1>
-    <img src="seth_nikita.jpg" alt="Picture of Nikita Seth" />
+    <img src="images/seth_nikita.jpg" alt="Picture of Nikita Seth" />
     <p> Click anywhere to see a special message!</p>
     <p>Hello! My name is Nikita Seth, and I am a Fourth year psychology major with a data science minor. I am from Lexington, Massachusetts. I am graduating this spring, and am excited to start a full time job!</p>
     <p>Here is a list of the contents  my website will have after it is complete later:</p>
@@ -39,14 +39,14 @@
 </ul>
 <p>Here is a picture of my dog Lucy, I love her very much</p>
 
-<img src="lucy.png" alt="Picture of a poodle" />
+<img src="images/lucy.png" alt="Picture of a poodle" />
 <p>Here is the link to one of my favorite cooking websites</p>
 <a href="https://sallysbakingaddiction.com/">
   Sally's Baking Addiction
 </a>
 <button>Change user</button>
 
-<script src="main.js"></script>
+<script src="scripts/main.js"></script>
 
   </body>
 </html>
