--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </ul>
 <p>Here is a picture of my dog Lucy, I love her very much</p>
 
-<img src="images/lucy.png" alt="Picture of a poodle" />
+<img src="images/lucy.jpg" alt="Picture of a poodle" />
 <p>Here is the link to one of my favorite cooking websites</p>
 <a href="https://sallysbakingaddiction.com/">
   Sally's Baking Addiction
